# legal_knowledge_graph

./: .gitignore  .gitmodules  README.md  docker-compose.yml  neo4j.conf  pyproject.toml
src/: generate.py  logger.py  run_benchmark.py  search.py  test_tool.py
src/generate_knowledge_graph/: builder.py  prompt.py  state.py
src/generate_knowledge_graph/nodes/: __init__.py  chunker.py  data_loader.py  document_structure_detector.py  entity_relation_extractor.py  entity_resolver.py  graph_db_writer.py  intro_body_separator.py  summarizer.py  table_of_contents_extractor.py
src/generate_knowledge_graph/utils/: __init__.py  callback.py  cluster.py  database.py  model.py  parser.py
src/search_knowledge_graph/: __init__.py  agent.py  prompt.py  state.py
src/search_knowledge_graph/tools/: __init__.py  get_chunk_info.py  get_corpus_toc.py  get_mention_chunk.py  knowledge_graph.py  response.py  search_article.py  search_chunk.py  search_connected_entity.py  search_corpus.py  search_entity.py  search_neighbor_chunk.py  search_relationship.py  search_section.py
