[project]
name = "legal-knowledge-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "neo4j>=5.28.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
]
