[project]
name = "legal-knowledge-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.27",
    "langfuse>=3.2.1",
    "langgraph>=0.6.7",
    "legalbenchrag",
    "neo4j>=5.28.1",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
]

[tool.uv.sources]
legalbenchrag = { path = "src/legalbenchrag", editable = true }
